Added support for displaying directory contents with DisplayFiles

--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -20,12 +20,13 @@
     "from mf_modules.jupyter_formatting import md_fromfile\n",
     "from mf_modules.jupyter_formatting import display_python_file\n",
     "from mf_modules.file_operations import open_file\n",
-    "from mf_modules.pydtype_operations import read_json, read_txt, read_yaml"
+    "from mf_modules.pydtype_operations import read_json, read_txt, read_yaml\n",
+    "from mf_modules.datamine_functions import recursive_glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +133,7 @@
     "            '.yml':self.yaml_prev,\n",
     "            '.png':self.img_prev,\n",
     "            '.jpg':self.img_prev,\n",
+    "            '.jpeg':self.img_prev,\n",
     "            #'.obj':self.obj_prev,\n",
     "            #'.txt':self.txt_prev,\n",
     "            '.md':self.md_prev,\n",
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +272,12 @@
     "            self.fpths = [fpths]\n",
     "        else:\n",
     "            self.fpths = fpths\n",
+    "            \n",
+    "        for fpth in self.fpths:\n",
+    "            if os.path.isdir(fpth):\n",
+    "                self.fpths.remove(fpth)\n",
+    "                self.fpths += recursive_glob(rootdir=fpth)\n",
+    "\n",
     "        self.fnms = [os.path.basename(fpth) for fpth in self.fpths];\n",
     "        self._init_previews()\n",
     "        self._init_form()\n",
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -354,7 +362,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "291dd1d012b14b11877f7dfaaf3ff29d",
+       "model_id": "79c608a8f608482ab9932253a493c8a1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,6 +405,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_csv.csv', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_docx.docx', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_gbxml.xml', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_jpg.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_json.json', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_md.md', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_pdf.pdf', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_plotly.plotly', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_plotly.plotly.json', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_png.png', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_py.py', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_xlsx.xlsx', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_YAML.YAML', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_1.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_2.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_3.jpg']\n"
+     ]
+    },
+    {
      "data": {
       "text/markdown": [
        "### Example1"
@@ -423,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52da50e372114f728822597900140ac4",
+       "model_id": "37ba4209851a4b5eb6d3da7e84b93f2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +452,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90414298662446648989184e6d767993",
+       "model_id": "37dccadce5f840fca35d76e6dbf62ec2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +466,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cefe2d64effb4850acd9476db580c34a",
+       "model_id": "f8b995efd18049bea083ca7d5fa3ef09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,6 +498,79 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_1.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_2.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_3.jpg']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Example3"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "display eg directory"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "471096ef6a494f50991a121beeb3a5ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ToggleButton(value=False, button_style='success', description='display/hide files', tooltip='shows and hides d…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ba6584c8e6443cc920cc91f9fa0e74c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_jpg_1.jpg', 'eg_jp…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22069b4fc34e48ecb76f729857ffc045",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -504,7 +592,7 @@
     "    fdir = os.path.dirname(os.path.realpath('__file__'))\n",
     "    fdir = os.path.realpath(os.path.join(fdir,r'..\\data\\eg_filetypes'))\n",
     "\n",
-    "    from mf_modules.datamine_functions import recursive_glob\n",
+    "    \n",
     "    fpths = recursive_glob(rootdir=fdir)\n",
     "    \n",
     "    # single file\n",
@@ -521,7 +609,13 @@
     "    display(Markdown('''display single file'''))\n",
     "    display(d1)\n",
     "    display(Markdown('---'))  \n",
-    "    display(Markdown('')) "
+    "    display(Markdown('')) \n",
+    "    \n",
+    "    fdir_eg = os.path.realpath(os.path.join(fdir,'eg_dir'))\n",
+    "    d2= DisplayFiles(fdir_eg)\n",
+    "    display(Markdown('### Example3'))\n",
+    "    display(Markdown('''display eg directory'''))\n",
+    "    display(d2)"
    ]
   },
   {
