Added functionality for comparing ModelRuns

--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import ipywidgets as widgets\n",
     "from markdown import markdown\n",
     "import plotly.io as pio\n",
+    "import copy\n",
     "\n",
     "from mf_modules.mydocstring_display import display_module_docstring\n",
     "from mf_modules.pandas_operations import del_matching\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +163,7 @@
     "            '.yml':self.yaml_prev,\n",
     "            '.png':self.img_prev,\n",
     "            '.jpg':self.img_prev,\n",
+    "            '.jpeg':self.img_prev,\n",
     "            #'.obj':self.obj_prev,\n",
     "            #'.txt':self.txt_prev,\n",
     "            '.md':self.md_prev,\n",
@@ -261,20 +263,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DisplayFiles():\n",
     "    def __init__(self, fpths):\n",
     "        self.out = widgets.Output();\n",
-    "        if type(fpths) != list:\n",
-    "            self.fpths = [fpths]\n",
+    "        fpths_temp = copy.deepcopy(fpths)\n",
+    "        \n",
+    "        if type(fpths_temp) != list:\n",
+    "            fpths_temp = [fpths_temp]\n",
     "        else:\n",
-    "            self.fpths = fpths\n",
+    "            fpths_temp = fpths_temp\n",
     "            \n",
-    "        for fpth in self.fpths:\n",
-    "            if os.path.isdir(fpth):\n",
+    "        self.fpths = copy.deepcopy(fpths_temp)\n",
+    "        for fpth in fpths_temp:\n",
+    "            if '.' not in fpth:\n",
     "                self.fpths.remove(fpth)\n",
     "                self.fpths += recursive_glob(rootdir=fpth)\n",
     "\n",
@@ -329,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -362,7 +367,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79c608a8f608482ab9932253a493c8a1",
+       "model_id": "99eddee5835e40f4ae9c7808ef946c5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -405,13 +410,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_csv.csv', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_docx.docx', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_gbxml.xml', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_jpg.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_json.json', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_md.md', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_pdf.pdf', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_plotly.plotly', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_plotly.plotly.json', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_png.png', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_py.py', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_xlsx.xlsx', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_YAML.YAML', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_1.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_2.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_3.jpg']\n"
-     ]
-    },
-    {
      "data": {
       "text/markdown": [
        "### Example1"
@@ -438,7 +436,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37ba4209851a4b5eb6d3da7e84b93f2b",
+       "model_id": "ad1e8f3a81e6452eb1f1b07bc1b32e50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,7 +450,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37dccadce5f840fca35d76e6dbf62ec2",
+       "model_id": "e1d6dcc1178441ee8721790c7448d28a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8b995efd18049bea083ca7d5fa3ef09",
+       "model_id": "70ff61e5719e4ac0b63612cd8302b2c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,13 +498,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_1.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_2.jpg', 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\eg_filetypes\\\\eg_dir\\\\eg_jpg_3.jpg']\n"
-     ]
-    },
-    {
      "data": {
       "text/markdown": [
        "### Example3"
@@ -533,7 +524,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "471096ef6a494f50991a121beeb3a5ae",
+       "model_id": "d72335ed5f9f442b8ffd153b94c2e627",
        "version_major": 2,
        "version_minor": 0
       },
@@ -547,7 +538,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba6584c8e6443cc920cc91f9fa0e74c",
+       "model_id": "08155dec650147fa895f0fe78dc171ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -561,7 +552,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22069b4fc34e48ecb76f729857ffc045",
+       "model_id": "6bc12ae6ca0443408897898938ed44a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -631,6 +622,48 @@
    "metadata": {
     "lines_to_next_cell": 2
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
