Added functionality to delete app in RunAppMruns

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,6 @@
     "        \n",
     "        if not os.path.exists(self.fdir_input):\n",
     "            os.makedirs(self.fdir_input)\n",
-    "        print(di)\n",
     "        for filename in os.listdir(self.fdir_input):\n",
     "            if filename.endswith(\".json\"):\n",
     "                self.batch.append(self._create_process(process_name=os.path.splitext(filename)[0], di=di)) \n",
@@ -856,9 +855,13 @@
     "                                style={'font_weight':'add'})\n",
     "        self.add_run = widgets.Button(description='add run',\n",
     "                                tooltip='add new run, based on another run',\n",
-    "                                button_style='warning',\n",
+    "                                button_style='primary',\n",
     "                                style={'font_weight':'bold'})\n",
-    "        self.form = widgets.HBox([self.reset, self.help, self.run_batch, self.add_run],\n",
+    "        self.del_run = widgets.Button(description='delete run',\n",
+    "                                tooltip='delete a run',\n",
+    "                                button_style='danger',\n",
+    "                                style={'font_weight':'bold'})\n",
+    "        self.form = widgets.HBox([self.reset, self.help, self.run_batch, self.add_run, self.del_run],\n",
     "                        layout=widgets.Layout(width='100%',align_items='stretch'))   \n",
     "    \n",
     "    def _init_controls(self):\n",
@@ -866,6 +869,7 @@
     "        self.reset.on_click(self._reset)\n",
     "        self.run_batch.on_click(self._run_batch)\n",
     "        self.add_run.on_click(self._add_run)\n",
+    "        self.del_run.on_click(self._del_run)\n",
     "        \n",
     "    def _help(self, sender):\n",
     "        with self.out:\n",
@@ -886,7 +890,6 @@
     "        return [widgets.VBox([l.layout, l.out]) for l in self.li]\n",
     "        \n",
     "    def _add_run(self, sender):\n",
-    "        \n",
     "        # Create Dropdown & Run Button\n",
     "        self.add_run_dd = widgets.Dropdown(\n",
     "                options=self._get_process_names(),\n",
@@ -902,6 +905,38 @@
     "            clear_output()\n",
     "            display(self.add_run_dd)\n",
     "            display(self.add_run_btn)\n",
+    "    \n",
+    "    def _del_run(self, sender):\n",
+    "        # Create Dropdown & Run Button\n",
+    "        self.del_run_dd = widgets.Dropdown(\n",
+    "                options=self._get_process_names(),\n",
+    "                description='Run to Delete:',\n",
+    "                disabled=False)\n",
+    "        self.del_run_btn = widgets.Button(description='delete chosen run',\n",
+    "                    tooltip='delete chosen run',\n",
+    "                    button_style='danger',\n",
+    "                    style={'font_weight':'bold'})\n",
+    "        \n",
+    "        self.del_run_btn.on_click(self._run_del_run) # OnClick method\n",
+    "        with self.out:\n",
+    "            clear_output()\n",
+    "            display(self.del_run_dd)\n",
+    "            display(self.del_run_btn)\n",
+    "        \n",
+    "    def _run_del_run(self, sender):\n",
+    "        dd_val = self.del_run_dd.value\n",
+    "        for process in self.processes:\n",
+    "            if(process['config']['process_name'] == dd_val):\n",
+    "                self.inputconfigs.remove(process)\n",
+    "                self.processes.remove(process)\n",
+    "        \n",
+    "        for l in self.li:\n",
+    "            if(l.config['process_name'] == dd_val):\n",
+    "                os.remove(l.config['fpth_inputs'])\n",
+    "                self.li.remove(l)\n",
+    "            \n",
+    "        self.del_run_dd.options=self._get_process_names() # Update Dropdown\n",
+    "        self.apps_layout.children = self._get_apps_layout()\n",
     "    \n",
     "    def _run_add_run(self,sender):\n",
     "        \n",
@@ -1007,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1039,7 +1074,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f469d36439044621a844461ccbf7b4d6",
+       "model_id": "d33752d4fa8a4fddb7e5f261fed88960",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1053,7 +1088,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4522b0742af4b75bf98a65f6985367c",
+       "model_id": "4c41ee43104e4ed88cb60d8135e6f171",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1122,7 +1157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2d7485064ca4de2a11e49120b6d55a6",
+       "model_id": "26d2c0d216d34bbabb9c71225ab0ae9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1136,7 +1171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d68976115484555bbbc15d02c45c72d",
+       "model_id": "82e63ec3536543ceba3efe1cd0462df3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1226,7 +1261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c05a5b03cee14e2596c9fd67dfeff01f",
+       "model_id": "f668ac3c4d4a4cacb77a1cb997153566",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1240,7 +1275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "858a17705d014cc7b95056dfc95d21c0",
+       "model_id": "8361ffcd0f47409097f311ba1b958dfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1254,7 +1289,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe604987c5aa4d4eb5662f87e78a86ec",
+       "model_id": "e96b9247337e4e7e964c3875b4d6fd93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1268,7 +1303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17ded34b9fd249f59aab5c955431f698",
+       "model_id": "691a9f0ac6ec44e398f281895b357a13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1282,7 +1317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89a07a35fcbc45aa915c0049fa55263d",
+       "model_id": "4ec3f707235441fe8076a2f0ed89e985",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1296,7 +1331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "893503c882ae4f3e8a44b30a64c8d0f7",
+       "model_id": "126e6d78276a4f73aa91d58590ad0977",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1310,7 +1345,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb2a7eb52d8e4f7e85680a45116e50a8",
+       "model_id": "19aabc193b4c4f8f83ffd4e18afdad47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1324,7 +1359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8ff9ae8dc3042ca88aba9dfc5c3cdd2",
+       "model_id": "606dbe95cbfe440c948aa82a66804b69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1350,318 +1385,6 @@
     {
      "data": {
       "text/markdown": [],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Example4"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "    as above but with an add run feature added. \n",
-       "\n",
-       "    ```\n",
-       "        di={\n",
-       "            'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
-       "            #'process_name':os.path.basename(os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py')),\n",
-       "            #'fpth_inputs':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\configs\\eplus_pipework_params.csv'),\n",
-       "            'fdir':os.path.join(NBFDIR,'notebooks'),\n",
-       "            'fdir_outputs':os.path.join(NBFDIR,'notebooks')\n",
-       "            }  \n",
-       "\n",
-       "        defaultrunapp={\n",
-       "            'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\docx_to_pdf.py'),\n",
-       "            'fdir':NBFDIR,\n",
-       "            'script_outputs': {'0': {\n",
-       "                'fdir':r'..\r",
-       "eports',\n",
-       "                'fnm': r'JupyterReportDemo.pdf',\n",
-       "                'description': \"a pdf report from word\"\n",
-       "                    }\n",
-       "                }\n",
-       "            }\n",
-       "\n",
-       "        runappcsv = {'app':RunAppEditCsv,'config':di}\n",
-       "        configs = [runappcsv,defaultrunapp,runappcsv]\n",
-       "        runapps = RunApps(configs)  \n",
-       "        display(runapps)\n",
-       "    ```\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bc12e0f9336482b9b06866fc5b3ff06",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(icon='eye-slash', layout=Layout(width='5%'), style=ButtonStyle(font_weight='bold'), tool…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86b76d93d8fa4655aba7021a84a3ef95",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9758e95f3e754f7cb6857d05af006183",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c342bf6a6a55453fbebf421a355d3bcb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae6565675d814c8c92a69c98fd45f376",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc075677c0e24e54976dd3f753c6b978",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "918420fdc9484d4d8873a3bb4688b5be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9eca79c78047411e965de38e3b19659b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'fpth_script': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\testproject\\\\datadriven\\\\src\\\\create_model_run_file.py', 'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\testproject\\\\datadriven\\\\src', 'script_outputs': {'0': {'fdir': '.', 'fnm': '.', 'description': 'Folder for data output'}, '1': {'fdir': '.', 'fnm': '.', 'description': 'Folder for analysis output'}}}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Example6"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Batch Run of RunApps, for ModelRun"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e52dc1778b1447dea90b4c4a761ca946",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(icon='eye-slash', layout=Layout(width='5%'), style=ButtonStyle(font_weight='bold'), tool…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcf3778311df4babbee2c902d888524c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05309ca9753744c882a426050c7ecab3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Compare Runs"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8e443add5094040b5364dfcb1fbc540",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16de9cd073184f3ca7fa19cc63487f43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
@@ -1935,6 +1658,20 @@
    "metadata": {
     "lines_to_next_cell": 2
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
